--- a/styles/style.css
+++ b/styles/style.css
@@ -270,7 +270,7 @@
 }
 .btn-card1 {
   background-color: #3cd8e8;
-  padding: 0.9rem 1.2rem;
+  padding: 15px 20px;
   border: none;
   border-radius: 48px;
   color: white;
