--- a/styles/style.css
+++ b/styles/style.css
@@ -163,6 +163,7 @@
   color: #202020;
 }
 .card-description {
+  font-family: Raleway;
   font-weight: 600;
   color: #808080;
   font-size: 0.9rem;
